# systemverilog-vip

./: .gitignore  .gitmodules  .rules.verible_lint  API_REFERENCE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.agent/: develop_workflow.md  verification_workflow.md
.github/workflows/: verible.yml  vunit.yml
apb_vip/doc/: README.md
apb_vip/sim/: apb_if.sv  apb_master_vip.sv  apb_mem_vip.sv  apb_slave_vip.sv
apb_vip/tb/: apb_mem_vip_tb.sv  apb_vip_tb.do  apb_vip_tb.sv  run.py
axi4_full_vip/: run.py
axi4_full_vip/doc/: README.md
axi4_full_vip/sim/: axi4_full_if.sv  axi4_full_master_vip.sv  axi4_full_mem_vip.sv  axi4_full_slave_vip.sv
axi4_full_vip/tb/: axi4_full_mem_vip_tb.do  axi4_full_mem_vip_tb.sv  axi4_full_slave_vip_tb.sv  axi4_full_vip_tb.do  axi4_full_vip_tb.sv  run.py
axi4_lite_vip/doc/: README.md
axi4_lite_vip/sim/: axi4_lite_if.sv  axi4_lite_master_vip.sv  axi4_lite_mem_vip.sv
axi4_lite_vip/tb/: axi4_lite_mem_vip_tb.do  axi4_lite_mem_vip_tb.sv  axi4_lite_vip_tb.do  axi4_lite_vip_tb.sv  run.py
axi4_stream_vip/: run.py
axi4_stream_vip/doc/: README.md
axi4_stream_vip/sim/: axi4_stream_if.sv  axi4_stream_master_vip.sv  axi4_stream_slave_vip.sv
axi4_stream_vip/tb/: axi4_stream_dut.sv  axi4_stream_vip_tb.do  axi4_stream_vip_tb.sv  run.py
axi_stream_vip/: axi_stream_dut.sv  axi_stream_if.sv  axi_stream_master_vip.sv  axi_stream_slave_vip.sv  axi_stream_vip_tb.sv  run.py
axi_stream_vip/doc/: README.md
mcp_server/: server.py
plans/: repo_analysis.md  sv_light_vip_workflow.md
spi_vip/: run.py
uart_vip/: run.py
(+47 files in other folders)
